conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ap1.artbit.com.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard-external
            port:
              number: 30100
